
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct kgsl_perfcounter_query {int groupid; unsigned int* countables; int count; } ;


 int IOCTL_KGSL_PERFCOUNTER_QUERY ;
 int O_RDWR ;
 int close (int) ;
 int ioctl (int,int ,struct kgsl_perfcounter_query*) ;
 int memset (struct kgsl_perfcounter_query*,int ,int) ;
 int open (char*,int ) ;
 int perror (char*) ;

int main(void) {
 int fd;
 struct kgsl_perfcounter_query data;
 unsigned int countables[16];

 fd = open("/dev/kgsl-3d0", O_RDWR);

 if (fd == -1) {
  perror("open");
  return -1;
 }

 memset(&data, 0, sizeof(struct kgsl_perfcounter_query));

 data.groupid = 1;
 data.countables = (unsigned int *) &countables;
 data.count = 0x80000001;

 ioctl(fd, IOCTL_KGSL_PERFCOUNTER_QUERY, &data);

 close(fd);

 return 0;
}
